--- a/karamuzi/Web.config
+++ b/karamuzi/Web.config
@@ -44,6 +44,7 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <add name="KaramuziModelContainer" connectionString="metadata=res://*/Models.KaramuziModel.csdl|res://*/Models.KaramuziModel.ssdl|res://*/Models.KaramuziModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=keyvan-toshiba;initial catalog=KaramuziDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="KaramuziModelContainer" connectionString="metadata=res://*/Models.KaramuziModel.csdl|res://*/Models.KaramuziModel.ssdl|res://*/Models.KaramuziModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=keyvan-toshiba;initial catalog=KaramuziDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="KaramuziModelContainer" connectionString="metadata=res://*/Models.KaramuziModel.csdl|res://*/Models.KaramuziModel.ssdl|res://*/Models.KaramuziModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pooneh-pc;initial catalog=KaramuziDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
